# MC-ALF

./: .gitignore  README.md  hires_fitter.py  mc-alf  pyproject.toml  requirements.txt  runfit.cfg  setup.py  test_print.py  test_suppression.py
mc_alf.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
mcalf/: cli.py
mcalf/routines/: __init__.py  hires_fitter.py  voigt_jax.py
mockdata/: civ_mock_spec.txt  fit.cfg
mockdata/output/fits/: pc_fits_0.prior_info  pc_fits_0.resume  pc_fits_0.stats  pc_fits_0.txt  pc_fits_0_dead-birth.txt  pc_fits_0_dead.txt  pc_fits_0_equal_weights.txt  pc_fits_0_phys_live-birth.txt  pc_fits_0_phys_live.txt  pc_fits_0_prior.txt
mockdata/output/fits/clusters/: pc_fits_0_1_equal_weights.txt
routines/: hires_fitter.py
scripts/: debug_jaxns.py  generate_from_model.py  mc-alf  mc-alf2  mc-alf3  plot_comparison.py  test_civ_profile.py  test_jax_components.py  verify_jax_voigt.py
testdata/: civ_mock_spec_multicomp.txt  fit.cfg  generate_from_model.py
testdata/output/fits/: pc_fits_0.stats  pc_fits_0.txt  pc_fits_0_phys_live-birth.txt  pc_fits_0_prior.txt
